added photos and services
