# docs/swagger.yaml
@@ -42,6 +42,34 @@ definitions:
       state:
         type: string
     type: object
+  models.Photo:
+    properties:
+      id:
+        type: integer
+      imageUrl:
+        type: string
+      organizationId:
+        type: string
+      tag:
+        type: string
+    type: object
+  models.Plan:
+    properties:
+      id:
+        type: integer
+      organizationId:
+        type: string
+      services:
+        items:
+          type: string
+        type: array
+      startingFrom:
+        type: integer
+      tag:
+        type: string
+      type:
+        type: string
+    type: object
   models.ResponseUploadFile:
     properties:
       url:
@@ -168,6 +196,171 @@ paths:
       summary: Get list of all organizations
       tags:
       - organizations
+  /api/photos:
+    get:
+      parameters:
+      - description: Organization ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Photo Tag
+        in: query
+        name: tag
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Photo'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get photos by organization ID and optionally by tag
+      tags:
+      - photos
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Photo Data
+        in: body
+        name: photo
+        required: true
+        schema:
+          $ref: '#/definitions/models.Photo'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "422":
+          description: Unprocessable Entity
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Create a new photo entry
+      tags:
+      - photos
+  /api/plans:
+    get:
+      parameters:
+      - description: Organization ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Plan Tag
+        in: query
+        name: tag
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Plan'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get plans by organization ID and optionally by tag
+      tags:
+      - plans
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Plan Data
+        in: body
+        name: plan
+        required: true
+        schema:
+          $ref: '#/definitions/models.Plan'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "422":
+          description: Unprocessable Entity
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Create a new plan entry
+      tags:
+      - plans
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Plan Data
+        in: body
+        name: plan
+        required: true
+        schema:
+          $ref: '#/definitions/models.Plan'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "422":
+          description: Unprocessable Entity
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Update plan details
+      tags:
+      - plans
   /api/upload:
     post:
       consumes:
