# routers/router.go
@@ -15,4 +15,13 @@ func SetupRoutes(app *fiber.App, db *gorm.DB, s3Client *s3.S3) {
 	api.Get("/organization/:id", handlers.GetOrganizationDetailById(db))
 	api.Post("/upload", handlers.UploadFileAmazonS3(s3Client))
 	api.Get("/organizations", handlers.GetOrganizations(db))
+
+	// Photo routes
+    api.Get("/photos/:id", handlers.GetPhotosByOrganization(db))
+    api.Post("/photos", handlers.CreatePhoto(db))
+
+    // Plan routes
+    api.Post("/plans", handlers.CreatePlan(db))
+    api.Get("/plans", handlers.GetPlansByOrganization(db))
+    api.Put("/plans", handlers.UpdatePlan(db))
 }
